--- a/RMS/src/main/resources/application.properties
+++ b/RMS/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=user
+spring.data.mongodb.database=RestaurantManagementSystem
 #spring.data.mongodb.username=con1
 #spring.data.mongodb.password=con1
 
