--- a/RMS/src/main/resources/application.properties
+++ b/RMS/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=RestaurantManagementSystem
-#spring.data.mongodb.username=con1
-#spring.data.mongodb.password=con1
+server.servlet.context-path=/rms
 
-
+server.servlet.session.timeout=30s
