--- a/RMS/src/main/resources/application.properties
+++ b/RMS/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=RestaurantManagementSystem
 server.servlet.context-path=/rms
 
-server.servlet.session.timeout=30s
+server.servlet.session.timeout=2000s
+server.servlet.session.cookie.max-age=2000s
